# rust-chess-sandbox

./: Cargo.toml  README.MD
src/: lib.rs  main.rs
src/backend/: datamodel.rs  mod.rs  moves.rs
src/ui/: mod.rs
src/ui/shaders/: mod.rs  primitives.rs  utils.rs
src/ui/shaders/data/: board.frag  board.vert  piece.frag  piece.vert
src/ui/ui_support/: mod.rs
