[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.32.1", default-features = true }
imgui = "0.10.0"
imgui-glium-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
image = "0.23"
winit = "0.28.1"